# Pickle

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  build.sh
cmake/CMakeMatlabPackageConfig/: .gitrepo  README.md  matlab_configure_install.cmake
cmake/CMakeMatlabPackageConfig/Templates/: PackageConfig-matlab.cmake.in  startupPackage.m.in
cmake/Templates/: PackageConfig.cmake.in
matlab/: Pickle.m
scripts/: matlab-dist-build.sh
